# cubicbezier

./: .travis.yml  Geom2D.hs  LICENSE  README.md  cubicbezier.cabal  mftests.hs
.github/workflows/: cabal.yml
CubicBezier/: #numeric.hs#  .#numeric.hs  approximate.hs  approximate.hs~  bezier.hs  bezier.hs~  numeric.hs  outline.hs  outline.hs~
Geom2D/: CubicBezier.hs  geom2d.hs
Geom2D/CubicBezier/: Approximate.hs  Basic.hs  Curvature.hs  Intersection.hs  MetaPath.hs  Numeric.hs  Outline.hs  Overlap.lhs  Stroke.hs  StrokeIntern.hs  tosvg.hs
Math/: BernsteinPoly.hs
tests/: MPTest.hs  NumTest.hs  test.hs
