Name:		cubicbezier
Version: 	0.1
Description:	Manipulating 2D cubic bezier curves.
Copyright: 	Kristof Bastiaensen (2013)
Stability:	Unstable
License:	GPL-2
License-file:	LICENSE
Author:		Kristof Bastiaensen
source-repository head
  type:		git
  location:	https://github.com/kuribas/cubicbezier
Build-type:	Simple
Cabal-version:	>=1.2

Library
  Build-depends: base >= 3, polynomial > 0.5, hmatrix >= 0.15
  Exposed-Modules:
    Geom2D
    Geom2D.CubicBezier
    Geom2D.CubicBezier.Base
    Geom2D.CubicBezier.Approximate
    Geom2D.CubicBezier.Outline
    Geom2D.CubicBezier.Numeric


