Name:		cubicbezier
Version: 	0.1
Description:	Manipulating 2D cubic bezier curves.
Copyright: 	Kristof Bastiaensen (2013)
Stability:	Unstable
License:	GPL-2
License-file:	LICENSE
Author:		Kristof Bastiaensen
Maintainer:	Kristof Bastiaensen
Build-type:	Simple
Cabal-version:	>=1.2

source-repository head
  type:		git
  location:	https://github.com/kuribas/cubicbezier

Library
  Ghc-options: -Wall -O2 -optc-ffast-math -optc-03
  Build-depends: base >= 3, containers > 0.4, integration >= 0.1.1
  Exposed-Modules:
    Geom2D
    Geom2D.CubicBezier
    Geom2D.CubicBezier.Basic
    Geom2D.CubicBezier.Approximate
    Geom2D.CubicBezier.Outline
    Geom2D.CubicBezier.Curvature
    Geom2D.CubicBezier.Intersection
    Math.BernsteinPoly
  Other-Modules:
    Geom2D.CubicBezier.Numeric
